--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,56 @@
 body {
   font-family: arial, sans-serif;
+  background: white;
+}
+
+.boarderDiv {
+  border: 1px solid #dddddd;
+  max-width: 500px;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 20px;
+  border-radius: 10px;
+}
+
+.cityInputBar {
+  width: 60%;
+  border: 1px solid #dddddd;
+  padding: 6px 15px;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.searchButton {
+  border: 1px solid #dddddd;
+  font-family: "Manrope", sans-serif;
+  line-height: 1.5;
+  color: white;
+  font-weight: 700;
+  padding: 6px 10px;
+  background-color: blue;
+  border-radius: 4px;
 }
 
 h1 {
-  margin-top: 20px;
-  text-align: left;
-  font-size: 35px;
-  line-height: 20px;
-  font-family: Helvetica;
-  margin-bottom: 30px;
-  color: black;
-  font-weight: 100;
-  margin: 0;
-}
-
-ul {
-  text-align: left;
-  font-size: 15px;
-  margin-top: 15px;
-  margin: 10 10px;
-  padding: 0;
-  list-style: none;
-  color: black;
+  color: rgb(33, 33, 33);
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 32px;
+  margin-bottom: 0;
 }
 
 p {
-  margin-top: 0px;
-  font-size: 15px;
-  position: relative;
-  left: 300px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
 }
 
-.weather-app {
-  border: 1px solid #dadde1;
-  padding: 15px;
-  margin: 20px auto;
-  border-radius: 10px;
-  max-width: 600px;
+a {
+  font-weight: 100;
 }
 
-.weather-icon {
-  height: 64px;
-  width: 64px;
-  margin-right: 10px;
-}
-
-.temperature {
-  color: rgb(33, 33, 33);
-  font-size: 64px;
-  font-weight: 400;
-  line-height: 1;
-}
-
-.units {
-  position: relative;
-  top: -34px;
-}
-
-.search-form {
-  margin-bottom: 20px;
+ul {
+  margin: 0;
+  padding: 0;
 }
